# CMakeLibrary

./: CMakeLists.txt  iOS.cmake
core/: CMakeLists.txt  squareroot.cpp  squareroot.h
platform/: CMakeLists.txt  sqrtuserobjc.mm  squarerootwrapper.h  squarerootwrapper.mm  squarerootwrapperuser.cpp
